Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132182

ProtobufQtCoreTypes: missing Qt includes for mapped messages

XMLWordPrintable

    • 3
    • 9966fdac3 (dev), 338717a91 (6.9), 7c0ea062d (6.8)

      message TestMessage {
          message Continuation {
              uint64 index = 1;
              uint64 count = 2;
              QtCore.QUuid uuid = 3;
          }
          Continuation continuation = 1;
      }
      

      this will not compile if put into a library

      /home/ddob/Qt/qt6/qtgrpc/build/clang-debug/examples/grpc/qtchat/client/messages.qpb.cpp:152:11: error: field has 
      
      incomplete type 'QUuid'
      
        152 |     QUuid m_uuid;
      
            |           ^
      
      /home/ddob/Qt/qt6/qtbase/src/corelib/kernel/qmetatype.h:1544:1: note: forward declaration of 'QUuid'
      
      1544 | QT_FOR_EACH_STATIC_CORE_CLASS(QT_FORWARD_DECLARE_STATIC_TYPES_ITER)
      
            | ^
      
      /home/ddob/Qt/qt6/qtbase/src/corelib/kernel/qmetatype.h:123:18: note: expanded from macro 'QT_FOR_EACH_STATIC_COR 

        For Gerrit Dashboard: QTBUG-132182
        # Subject Branch Project Status CR V

            semlanik Alexey Edelev
            dennisoberst Dennis Oberst
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes