tests/auto/protobufqttypes/qtprotobufqttypesguitest.cpp
@@ -2,6 +2,7 @@
 // Copyright (C) 2020 Alexey Edelev <semlanik@gmail.com>
 // SPDX-License-Identifier: LicenseRef-Qt-Commercial OR GPL-3.0-only
 
+#include "qtguitypesnested.qpb.h"
 #include "qtguitypes.qpb.h"
 
 #include <qtprotobuftestscommon.h>
@@ -37,6 +38,8 @@ private Q_SLOTS:
     void qTransform();
     void qQuaternion();
     void qImage();
+
+    void nestedQColorMessageDefined();
 
 private:
     QProtobufSerializer serializer;
@@ -315,6 +318,14 @@ void QtProtobufQtTypesQtGuiTest::qImage()
     msg.setTestField(initialImage);
     msg.deserialize(&serializer, QByteArray::fromHex(emptyValue));
     QCOMPARE(msg.testField(), QImage());
+}
+
+void QtProtobufQtTypesQtGuiTest::nestedQColorMessageDefined()
+{
+    NestedQColorMessage::QColorMessage msg;
+    msg.setTestField({"red"});
+    QVERIFY(msg.testField().isValid());
+    QCOMPARE(msg.testField(), QColor{"red"});
 }
 
 QTEST_MAIN(QtProtobufQtTypesQtGuiTest)
